crates/ruff_python_parser/tests/snapshots/invalid_syntax@match_stmt_no_newline_before_case.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/match_stmt_no_newline_before_case.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            8,
        ),
        range: 0..23,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(
                        7,
                    ),
                    range: 0..22,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(
                                1,
                            ),
                            range: 6..9,
                            id: Name("foo"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 11..22,
                            node_index: NodeIndex(
                                6,
                            ),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 16..17,
                                    node_index: NodeIndex(
                                        3,
                                    ),
                                    pattern: None,
                                    name: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(
                                            5,
                                        ),
                                        range: 19..22,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(
                                                    4,
                                                ),
                                                range: 19..22,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match foo: case _: ...
  |            ^^^^ Syntax Error: Expected newline, found 'case'
  |


  |
1 | match foo: case _: ...
  |                       ^ Syntax Error: Expected dedent, found end of file
  |
